--- a/project/index.html
+++ b/project/index.html
@@ -3,69 +3,252 @@
 <head>
   <meta charset="UTF-8">
   <title>Remote Controller</title>
-  <link rel="stylesheet" href="main.css" />
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Share+Tech+Mono&display=swap" rel="stylesheet">
+
+  <!-- SCA Logo -->
+  <link rel="icon" href="assets/remoteControllerIcon.png" type="image/x-icon">
+  <!-- Font Awesome -->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+  <!-- Bootstrap core CSS -->
+  <link rel="stylesheet" href="css/bootstrap.min.css">
+  <!-- Material Design Bootstrap -->
+  <link rel="stylesheet" href="css/mdb.min.css">
+  <!-- Custom styles -->
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+  <!-- Content -->
+  <!--Navbar-->
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar" id="navbar">
+      <!-- Navbar brand -->
+      <a class="navbar-brand" href="/">Simply Complex Apps</a>
+      <!-- Collapse button -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarContent"
+              aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation" id="hamburgerButton">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <!-- Collapsible content -->
+      <div class="collapse navbar-collapse" id="navbarContent">
+        <!-- Links -->
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+        </ul>
+        <!-- Social Icon  -->
+        <ul class="navbar-nav nav-flex-icons">
+          <li class="nav-item">
+            <a class="nav-link" href="https://twitter.com/SimplyComplexAp">
+              <i class="fab fa-twitter"></i>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="https://www.instagram.com/simplycomplexapps/">
+              <i class="fab fa-instagram"></i>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <!--/.Navbar-->
+    <!-- Full Page Intro -->
+    <div id="intro" class="view">
+      <div id="particles-js" class="rgba-gradient"></div>
+      <!-- Mask & flexbox options-->
+      <div class="mask d-flex justify-content-center align-items-center">
+        <!-- Content -->
+        <div class="wrapper">
+          <div class="intro-section">
+            <!--Icon image-->
+            <div class="view overlay rounded-circle z-depth-2 remote-controller-icon">
+              <img class="img-fluid remote-controller-icon-image" alt="Remote Controller" src="assets/remoteControllerIcon.png">
+              <a href="https://play.google.com/store/apps/developer?id=Simply+Complex+Apps">
+                <div class="mask waves-effect rgba-white-slight"></div>
+              </a>
+            </div>
+            <!--Grid column-->
+            <div class="mb-4 white-text">
+              <h1 class="font-weight-bold white-text mb-0 pt-4" style="font-family: 'Roboto';" id="title">Remote Controller</h1>
+              <hr class="hr-light my-4 w-100">
+              <h6 class="subtext-header mt-3 mb-4">
+                Remote Controller allows you to use your phone as a controller!
+              </h6>
+              <a href="https://play.google.com/store/apps/developer?id=Simply+Complex+Apps" class="btn z-depth-2" style="margin: 0;"><i class="fab fa-google-play mr-2"></i>App Store</a>
+            </div>
+            <!--Grid column-->
+          </div>
+        </div>
 
-<header class="navbar">
-  <a id="title">
-    Remote Controller
-  </a>
-  <!-- Links -->
-  <div class="collapse navbar-collapse" id="navbarContent">
-    <ul class="navbar-nav">
-      <li class="nav-item review-nav">
-        <a class="nav-link" href="privacy-policy">Privacy&nbsp;Policy</a>
-      </li>
-    </ul>
-    <!-- Social Icon  -->
-    <ul class="navbar-nav nav-flex-icons">
-      <li class="nav-item">
-        <a class="nav-link" href="https://twitter.com/SimplyComplexAp">
-          <i class="fab fa-twitter"></i>
-        </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="https://www.instagram.com/simplycomplexapps/">
-          <i class="fab fa-instagram"></i>
-        </a>
-      </li>
-    </ul>
-  </div>
-</header>
+        <!-- Content -->
+      </div>
+      <!-- Mask & flexbox options-->
+    </div>
+    <!-- Full Page Intro -->
+  </header>
 
-<main>
-  <div class="main-text">
-    <h1>
-      Remote Controller
-    </h1>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-      molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-      numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-      optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-      obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-      nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-      tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
-      quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos
-      sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
-      recusandae alias error harum maxime adipisci amet laborum. Perspiciatis
-      minima nesciunt dolorem! Officiis iure rerum voluptates a cumque velit
-      quibusdam sed amet tempora. Sit laborum ab, eius fugit doloribus tenetur
-      fugiat, temporibus enim commodi iusto libero magni deleniti quod quam
-      consequuntur! Commodi minima excepturi repudiandae velit hic maxime
-      doloremque. Quaerat provident commodi consectetur veniam similique ad
-      earum omnis ipsum saepe, voluptas, hic voluptates pariatur est explicabo
-      fugiat, dolorum eligendi quam cupiditate excepturi mollitia maiores labore
-      suscipit quas? Nulla, placeat. Voluptatem quaerat non architecto ab laudantium
-      modi minima sunt esse temporibus sint culpa, recusandae aliquam numquam
-      totam ratione voluptas quod exercitationem fuga. Possimus quis earum veniam
-      quasi aliquam eligendi, placeat qui corporis!
-    </p>
-  </div>
-</main>
+  <!--Main layout-->
+  <main>
+    <!--Section: contact-->
+    <section id="contact" class="py-5 hideme contact-section">
 
+      <div class="container">
+
+        <!-- Section heading -->
+        <h2 class="h1-responsive font-weight-bold text-center mb-5">Contact</h2>
+        <!-- Section description -->
+        <p class="text-center w-responsive mx-auto mb-5">Feel free to use the contact form or email below if you have any questions, comments, improvements, or business inquires.</p>
+
+        <!-- Grid row -->
+        <div class="row">
+
+          <!-- Grid column -->
+          <div class="col-md-9 mb-md-0 mb-5">
+
+            <!-- Birds sent -->
+            <div class="birds" id="sentDiv">
+              <div class="wrapper-no4 flex-center">
+                <div class="div-bird" id="divBird">
+                  <p class="bird__text">Sent!<i class="fas fa-feather-alt ml-2" style="font-size: 16px"></i></p>
+
+                  <span class="bird"></span>
+                </div>
+              </div>
+            </div>
+            <!-- Birds sent -->
+
+            <form id="contactForm">
+
+              <!-- Grid row -->
+              <div class="row">
+
+                <!-- Grid column -->
+                <div class="col-md-6">
+                  <div class="md-form mb-0">
+                    <input type="text" id="contactEmail" name="email" class="form-color form-control">
+                    <label for="contact-email" id="contactEmailLabel" class="form-label-color">Your email</label>
+                  </div>
+                </div>
+                <!-- Grid column -->
+                <!-- Grid column -->
+                <div class="col-md-6">
+                  <div class="md-form mb-0">
+                    <input type="text" id="contactSubject" name="subject" class="form-color form-control">
+                    <label for="contact-Subject" id="contactSubjectLabel" class="form-label-color">Subject</label>
+                  </div>
+                </div>
+                <!-- Grid column -->
+
+              </div>
+              <!-- Grid row -->
+              <!-- Grid row -->
+              <div class="row">
+
+                <!-- Grid column -->
+                <div class="col-md-12">
+                  <div class="md-form">
+                    <textarea type="text" id="contactMessage" name="message" class="form-color form-control md-textarea" rows="3"></textarea>
+                    <label for="contact-message" id="contactMessageLabel" class="form-label-color">Your message</label>
+
+                    <span id="oneStar" class="fa fa-star checked"></span>
+                    <span id="twoStar" class="fa fa-star checked"></span>
+                    <span id="threeStar" class="fa fa-star checked"></span>
+                    <span id="fourStar" class="fa fa-star checked"></span>
+                    <span id="fiveStar" class="fa fa-star checked"></span>
+                  </div>
+                </div>
+                <!-- Grid column -->
+
+              </div>
+              <!-- Grid row -->
+
+            </form>
+
+            <div class="text-center text-md-left">
+              <a id="sendFormButton" class="btn btn-md" onclick="validateForm()" style="background-color: #9c27b0">Send</a>
+            </div>
+
+          </div>
+          <!-- Grid column -->
+          <!-- Grid column -->
+          <div class="col-md-3 text-center">
+            <ul class="list-unstyled mb-0">
+              <li>
+                <div class="flex-center" style="padding-bottom: 10px;">
+                  <div class="view overlay rounded-circle z-depth-2" style="height: 47px; width: 47px; background-color: #9c27b0;">
+                    <i class="fa fa-envelope white-text flex-center" style="font-size: 20px;"></i>
+                    <a href="mailto: simplycomplexapps@gmail.com">
+                      <div class="mask waves-effect rgba-white-slight"></div>
+                    </a>
+                  </div>
+                </div>
+                <!--<i class="fa fa-envelope fa-2x mt-4 black-text"></i>-->
+                <p class="mb-0 flex-center"><a href="mailto: simplycomplexapps@gmail.com" style="color: black;">simplycomplexapps@gmail.com</a></p>
+              </li>
+            </ul>
+          </div>
+          <!-- Grid column -->
+        </div>
+        <!-- Grid row -->
+
+      </div>
+
+    </section>
+    <!--Section: contact-->
+  </main>
+
+  <!-- Footer -->
+  <footer class="page-footer font-small pt-4">
+
+    <!-- Footer Elements -->
+    <div class="container">
+
+      <!-- Social buttons -->
+      <ul class="list-unstyled list-inline text-center">
+        <li class="list-inline-item">
+          <a class="btn-floating btn-tw mx-1" href="https://twitter.com/SimplyComplexAp">
+            <i class="fab fa-twitter"> </i>
+          </a>
+        </li>
+        <li class="list-inline-item">
+          <a class="btn-floating btn-in mx-1" href="https://www.instagram.com/simplycomplexapps/">
+            <i class="fab fa-instagram"> </i>
+          </a>
+        </li>
+      </ul>
+      <!-- Social buttons -->
+
+    </div>
+    <!-- Footer Elements -->
+    <div class="footer-copyright text-center pt-3">
+      <a href="/privacy-policy">Privacy Policy</a>
+    </div>
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-2">
+      © 2023 Copyright: Simply Complex Apps
+    </div>
+    <!-- Copyright -->
+
+  </footer>
+  <!-- Footer -->
+
+  <!-- Content End -->
+  <!-- jQuery -->
+  <script type="text/javascript" src="js/jquery.min.js"></script>
+  <!-- Bootstrap tooltips -->
+  <script type="text/javascript" src="js/popper.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script type="text/javascript" src="js/bootstrap.min.js"></script>
+  <!-- MDB core JavaScript -->
+  <script type="text/javascript" src="js/mdb.min.js"></script>
+  <!-- Particles JS library -->
+  <script src="js/particles.min.js"></script>
+  <!-- My script -->
+  <script type="text/javascript" src="js/main.js"></script>
 </body>
 </html>
