--- a/project/index.html
+++ b/project/index.html
@@ -50,7 +50,7 @@
             <div class="dropdown-user-menu">
               <ul class="dropdown-user-menu-items">
                 <li class="nav-item">
-                  <a class="nav-link" href="/login">Login</a>
+                  <a class="nav-link" href="./login">Login</a>
                 </li>
               </ul>
             </div>
