--- a/project/privacy-policy/index.html
+++ b/project/privacy-policy/index.html
@@ -4,32 +4,22 @@
   <meta charset="UTF-8">
   <title>Remote Controller - Privacy Policy</title>
 </head>
+<style>
+  body { font: 16px Helvetica, sans-serif; color: #000; }
+  a { color: #976ff5; text-decoration: none; }
+  a:hover { color: #000; text-decoration: none; }
+</style>
 <body>
 <div class="py-5 container">
   <h1>Remote Controller - Privacy Policy</h1>
   <div>
     <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime mollitia,
-      molestiae quas vel sint commodi repudiandae consequuntur voluptatum laborum
-      numquam blanditiis harum quisquam eius sed odit fugiat iusto fuga praesentium
-      optio, eaque rerum! Provident similique accusantium nemo autem. Veritatis
-      obcaecati tenetur iure eius earum ut molestias architecto voluptate aliquam
-      nihil, eveniet aliquid culpa officia aut! Impedit sit sunt quaerat, odit,
-      tenetur error, harum nesciunt ipsum debitis quas aliquid. Reprehenderit,
-      quia. Quo neque error repudiandae fuga? Ipsa laudantium molestias eos
-      sapiente officiis modi at sunt excepturi expedita sint? Sed quibusdam
-      recusandae alias error harum maxime adipisci amet laborum. Perspiciatis
-      minima nesciunt dolorem! Officiis iure rerum voluptates a cumque velit
-      quibusdam sed amet tempora. Sit laborum ab, eius fugit doloribus tenetur
-      fugiat, temporibus enim commodi iusto libero magni deleniti quod quam
-      consequuntur! Commodi minima excepturi repudiandae velit hic maxime
-      doloremque. Quaerat provident commodi consectetur veniam similique ad
-      earum omnis ipsum saepe, voluptas, hic voluptates pariatur est explicabo
-      fugiat, dolorum eligendi quam cupiditate excepturi mollitia maiores labore
-      suscipit quas? Nulla, placeat. Voluptatem quaerat non architecto ab laudantium
-      modi minima sunt esse temporibus sint culpa, recusandae aliquam numquam
-      totam ratione voluptas quod exercitationem fuga. Possimus quis earum veniam
-      quasi aliquam eligendi, placeat qui corporis!
+      No one wants their personal data siphoned and retained without their knowledge. Therefore, Simply Complex
+      Apps takes your privacy very seriously and is incredibly open about its privacy policy. This website uses
+      third-party vendors to help provide you with the best user experience possible. To be as open as possible,
+      some third-party vendors that are used on this website include Google Analytics and Google Tags. By using
+      this website, you agree to their terms and services. As always, if you ever have any questions or concerns
+      please feel free to reach out via email at <a href="mailto:simplycomplexapps@gmail.com">simplycomplexapps@gmail.com</a>.
     </p>
   </div>
 </div>
