--- a/project/index.html
+++ b/project/index.html
@@ -69,6 +69,7 @@
         </ul>
       </div>
     </nav>
+    <div data-searchable></div>
     <!--/.Navbar-->
     <!-- Full Page Intro -->
     <div id="intro" class="view">
