--- a/project/index.html
+++ b/project/index.html
@@ -49,6 +49,12 @@
             <a class="nav-link" href="#beta">Beta</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="#articles">Articles</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./controller-tester">Test Controller</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="#contact">Contact</a>
           </li>
         </ul>
@@ -316,6 +322,52 @@
 
     </section>
     <!--Section: Beta-->
+
+    <!--Section: articles-->
+    <section id="articles" class="py-5 hideme articles-section">
+
+      <div class="container">
+
+        <h2 class="h1-responsive font-weight-bold text-center mb-5">Most Recent Article</h2>
+
+        <div class="card" id="articleCard">
+
+          <a id="articleCardLink" href="./articles">
+            <div class="mask waves-effect rgba-white-slight">
+              <div class="text-black d-flex align-items-center py-2 px-3">
+                <div>
+                  <h4 id="articleCardTitle" class="mb-0 mt-2 font-weight-bold"></h4>
+                  <div id="articleCardDescription" class="mt-3 px-2">
+                    <p style="font-size: 80%;">
+                    </p>
+                  </div>
+                  <div class="mt-3 px-2">
+                    <div style="font-size: 80%; display: flex">
+                      By&nbsp;
+                      <p id="articleCardCreator" class="font-weight-bold"></p>
+                      &nbsp;•&nbsp;
+                      <p id="articleCardDate"></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </a>
+
+        </div>
+
+        <div class="text-center">
+          <a class="btn text-white waves-effect waves-light mt-4"
+             href="./articles"
+             style="background-color: var(--main-color)">
+            See All Articles
+          </a>
+        </div>
+
+      </div>
+
+    </section>
+    <!--Section: articles-->
 
     <!--Section: contact-->
     <section id="contact" class="py-5 hideme contact-section">
